一、参照泛微得设计页面，增加传阅得功能，支持根据配置二次传阅。 二、增加连续审批的控制逻辑：       1，仅审批一次，后续重复的审批节点均自动同意 2，仅针对连续审批的节点自动同意 3，不自动同意，每个节点都需要审批。 三、flow-完善流程模型设置的存储.优化发起人继续发起的操作